# QA_7hw

./: conftest.py  pyproject.toml
components/: components.py
pages/: accordian.py  base_page.py  demoqa_page.py  elements_page.py  modal_dialogs.py
tests/: test_check_text.py
tests/tests_hw/: test_check_text.py  test_page_dialogs.py  test_visible_hw.py
