[tool.poetry]
name = "demoqa-home7"
version = "0.1.0"
description = ""
authors = ["@omi-coder <omi-ufa@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^78.1.0"
pytest = "^8.3.5"
selenium = "^4.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
